# logger

./: CMakeLists.txt
include/: Logger.h  Modifier.h  logs.inl
src/: Logger.cpp  main.cpp
